force-app/main/default/objects/PartnerFundRequest/PartnerFundRequest.object-meta.xml
<CustomObject>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>