force-app/main/default/objects/PartnerFundRequest/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Brand reputation (co-branded uniforms, vehicle wraps)</fullName>
            </value>
            <value>
                <fullName>Digital Catalogs, brochures, literature</fullName>
            </value>
            <value>
                <fullName>Print Catalogs, brochures, literature</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>