force-app/main/default/objects/PartnerFundRequest/fields/Last_Approver_approval_date2__c.field-meta.xml
<CustomField>
    <fullName>Last_Approver_approval_date2__c</fullName>
    <label>Last Approver approval date2</label>
    <type>DateTime</type>
</CustomField>