force-app/main/default/objects/PartnerFundRequest/fields/Last_Approver_approval_date__c.field-meta.xml
<CustomField>
    <fullName>Last_Approver_approval_date__c</fullName>
    <label>Last Approver approval date</label>
    <type>Date</type>
</CustomField>