force-app/main/default/objects/PartnerFundRequest/fields/ScheduleReminderDate__c.field-meta.xml
<CustomField>
    <fullName>ScheduleReminderDate__c</fullName>
    <formula>Last_Approver_approval_date2__c +  7</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ScheduleReminderDate</label>
    <type>DateTime</type>
</CustomField>