force-app/main/default/objects/PartnerFundRequest/validationRules/Request_should_be_greaterThan_10.validationRule-meta.xml
<ValidationRule>
    <fullName>Request_should_be_greaterThan_10</fullName>
    <active>false</active>
    <errorConditionFormula>RequestedAmount &lt; 10</errorConditionFormula>
    <errorDisplayField>RequestedAmount</errorDisplayField>
    <errorMessage>Requested Amount should be greater than 10</errorMessage>
</ValidationRule>