force-app/main/default/objects/PartnerFundRequest/listViews/Submitted_Request.listView-meta.xml
<ListView>
    <fullName>Submitted_Request</fullName>
    <columns>Name</columns>
    <columns>CreatedBy</columns>
    <columns>Allocation</columns>
    <columns>Campaign</columns>
    <columns>Budget</columns>
    <columns>Description</columns>
    <columns>RequestedAmount</columns>
    <columns>DesiredOutcome</columns>
    <columns>Amount</columns>
    <columns>Status</columns>
    <columns>ChannelPartner</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status</field>
        <operation>equals</operation>
        <value>3</value>
    </filters>
    <label>Submitted Request</label>
</ListView>